--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.2",
     "@tailwindcss/vite": "^4.1.15",
+    "autoprefixer": "^10.4.21",
+    "framer-motion": "^12.23.24",
+    "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
-    "tailwindcss": "^4.1.15"
+    "react-router-dom": "^7.9.4",
+    "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
