--- a/package.json
+++ b/package.json
@@ -10,17 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "@reduxjs/toolkit": "^2.9.2",
     "@tailwindcss/vite": "^4.1.15",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.13.1",
+    "firebase": "^12.5.0",
+    "formik": "^2.4.6",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.548.0",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
-    "tailwindcss": "^4.1.16"
+    "react-toastify": "^11.0.5",
+    "tailwindcss": "^4.1.16",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
