feat: Add password reset flow with OTP verification and nodemailer integration

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.548.0",
+    "nodemailer": "^7.0.10",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
